--- a/WeddingApp/WeddingApp/Views/UserControls/Admin/RoleListUC.xaml
+++ b/WeddingApp/WeddingApp/Views/UserControls/Admin/RoleListUC.xaml
@@ -66,7 +66,7 @@
                 Grid.ColumnSpan="3"
                 ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                 x:Name="roleList"
-                ItemsSource="{Binding Roles, UpdateSourceTrigger=PropertyChanged}" d:ItemsSource="{d:SampleData ItemCount=5}">
+                ItemsSource="{Binding Roles, UpdateSourceTrigger=PropertyChanged}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <Grid MinHeight="110" Width="1110">
