--- a/WeddingApp/WeddingApp/Views/UserControls/Admin/EmployeeListUC.xaml
+++ b/WeddingApp/WeddingApp/Views/UserControls/Admin/EmployeeListUC.xaml
@@ -116,7 +116,7 @@
                                     Foreground="Black"
                                     FontSize="19"
                                     FontWeight="Medium"
-                                    Text="{Binding STARTWORKING, StringFormat=N0, UpdateSourceTrigger=PropertyChanged}"
+                                    Text="{Binding STARTWORKING, StringFormat={} {0:dd/MM/yyyy}, UpdateSourceTrigger=PropertyChanged}"
                                     VerticalAlignment="Center"
                                     HorizontalAlignment="Center">
                                     </TextBlock>
