--- a/WeddingApp/WeddingApp/Views/UserControls/MenuUC.xaml
+++ b/WeddingApp/WeddingApp/Views/UserControls/MenuUC.xaml
@@ -19,8 +19,8 @@
         <Grid>
             <Grid Margin="10">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="80"/>
-                    <RowDefinition/>
+                    <RowDefinition Height="80" />
+                    <RowDefinition />
                 </Grid.RowDefinitions>
 
                 <Grid Grid.Row="0">
@@ -36,7 +36,7 @@
                         Command="{Binding PreviousUCCommand}"
                         CommandParameter="{Binding ElementName=menuUC}">
                         <Button.Content>
-                            <materialDesign:PackIcon Kind="ArrowLeftThick" Width="30" Height="30"/>
+                            <materialDesign:PackIcon Kind="ArrowLeftThick" Width="30" Height="30" />
                         </Button.Content>
                     </Button>
                     <TextBlock
@@ -46,7 +46,7 @@
                         FontWeight="Bold"
                         HorizontalAlignment="Center"
                         VerticalAlignment="Top"
-                        Margin="0 20 0 0"/>
+                        Margin="0 20 0 0" />
                 </Grid>
 
                 <Grid Grid.Row="1">
@@ -97,7 +97,8 @@
                                         </TextBox>
                                     </DockPanel>
                                 </materialDesign:ColorZone>
-                                <ComboBox x:Name="combox"
+                                <StackPanel Orientation="Horizontal">
+                                    <ComboBox x:Name="combox"
                             Height="40" Width="150"
                             VerticalAlignment="Top"
                             HorizontalAlignment="Right"
@@ -108,17 +109,23 @@
                             materialDesign:HintAssist.Hint="Sắp xếp"
                             VerticalContentAlignment="Center"
                                   SelectedItem="">
-                                    <!--<i:Interaction.Triggers>
-                                        <i:EventTrigger EventName="SelectionChanged">
-                                            <i:InvokeCommandAction Command="{Binding FilterCommand}"
-                                        CommandParameter="{Binding ElementName=combox}" />
-                                        </i:EventTrigger>
-                                    </i:Interaction.Triggers>-->
-                                    <ComboBoxItem Content="Giá tăng" x:Name="GT">
-                                    </ComboBoxItem>
-                                    <ComboBoxItem Content="Giá giảm" x:Name="GG">
-                                    </ComboBoxItem>
-                                </ComboBox>
+                                        <ComboBoxItem Content="Giá tăng" x:Name="GT">
+                                        </ComboBoxItem>
+                                        <ComboBoxItem Content="Giá giảm" x:Name="GG">
+                                        </ComboBoxItem>
+                                    </ComboBox>
+
+                                    <ComboBox x:Name="comboxTypeDish"
+                            Height="40" Width="150"
+                            Margin="20 20 10 0"
+                            Foreground="Black"
+                            FontSize="16"
+                            materialDesign:TextFieldAssist.UnderlineBrush="{StaticResource Orange1}"
+                            materialDesign:HintAssist.Hint="Loại món"
+                            VerticalContentAlignment="Center"
+                                  SelectedItem="">
+                                    </ComboBox>
+                                </StackPanel>
                             </StackPanel>
 
                             <!--Filter-->
@@ -146,9 +153,9 @@
                         Margin="20 0 20 20"
                         ClipToBounds="True">
                             <Border
-                            Background="Transparent" 
-                            BorderBrush="LightGray" 
-                            BorderThickness="1" 
+                            Background="Transparent"
+                            BorderBrush="LightGray"
+                            BorderThickness="1"
                             Margin="-2">
                                 <Border.Effect>
                                     <DropShadowEffect ShadowDepth="0" BlurRadius="10" />
@@ -175,7 +182,7 @@
                                     <DataTemplate>
                                         <Grid x:Name="itemProduct" Margin="10 0">
                                             <StackPanel
-                                                Width="150" 
+                                                Width="150"
                                                 Height="270"
                                                 Margin="15 20 15 0">
                                                 <!--hình món ăn-->
@@ -288,8 +295,8 @@
                         </Grid>
                         <Grid Grid.Row="1" Margin="10">
                             <ScrollViewer Margin="10 0">
-                                <ListView 
-                                    x:Name="carts" 
+                                <ListView
+                                    x:Name="carts"
                                     ScrollViewer.CanContentScroll="False"
                                     ItemsSource="{Binding Path=SelectedDishes, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}">
                                     <ListView.ItemTemplate>
@@ -371,7 +378,6 @@
                                             </Grid>
                                         </DataTemplate>
                                     </ListView.ItemTemplate>
-
 
                                     <ListView.ItemContainerStyle>
                                         <Style TargetType="{x:Type ListViewItem}">
