--- a/WeddingApp/WeddingApp/Resources/XAML/MainResources.xaml
+++ b/WeddingApp/WeddingApp/Resources/XAML/MainResources.xaml
@@ -33,4 +33,5 @@
     <viewmodels:AddDishVM x:Key="addDishVM"></viewmodels:AddDishVM>
     <viewmodels:EditDishVM x:Key="editDishVM"></viewmodels:EditDishVM>
     <viewmodels:AddServiceVM x:Key="addServiceVM"></viewmodels:AddServiceVM>
+    <viewmodels:ShiftListVM x:Key="shiftListVM"></viewmodels:ShiftListVM>
 </ResourceDictionary>
