--- a/WeddingApp/WeddingApp/Views/UserControls/WeddingListUC.xaml
+++ b/WeddingApp/WeddingApp/Views/UserControls/WeddingListUC.xaml
@@ -136,7 +136,7 @@
 
                         <!--tên sảnh-->
                         <TextBlock
-                            Text="{Binding GROOM, UpdateSourceTrigger=PropertyChanged}"
+                            Text="{Binding GROOMNAME, UpdateSourceTrigger=PropertyChanged}"
                             FontSize="20"
                             VerticalAlignment="Center"
                             HorizontalAlignment="Center"
@@ -146,7 +146,7 @@
                             TextWrapping="Wrap" Margin="12,23" />
                         <!--Loại sảnh-->
                         <TextBlock
-                            Text="{Binding BRIDE,UpdateSourceTrigger=PropertyChanged}"
+                            Text="{Binding BRIDENAME ,UpdateSourceTrigger=PropertyChanged}"
                             FontSize="20"
                             VerticalAlignment="Center"
                             HorizontalAlignment="Center"
@@ -174,7 +174,7 @@
 
                         <TextBlock
                             Grid.Column="5"
-                            Text="{Binding SHIFT.SHIFTSTART, UpdateSourceTrigger=PropertyChanged}"
+                            Text="{Binding SHIFT.STARTTIME, UpdateSourceTrigger=PropertyChanged}"
                             FontSize="20"
                             FontWeight="DemiBold"
                             HorizontalAlignment="Center"
