--- a/WeddingApp/WeddingApp/Views/MainWindow.xaml
+++ b/WeddingApp/WeddingApp/Views/MainWindow.xaml
@@ -51,7 +51,10 @@
                     </Grid>
                     <Separator Margin="20 151" BorderBrush="Black" Height="3" ></Separator>
                     <Grid Grid.Row="1">
-                        <ListView x:Name="listViewMenu">
+                        <ListView 
+                            x:Name="listViewMenu"
+                            Margin="0 0 0 50"
+                            ScrollViewer.VerticalScrollBarVisibility="Hidden">
                             <ListViewItem
                             Margin="20 20 20 10"
                             FontSize="15" FontWeight="Bold"
