--- a/WeddingApp/WeddingApp/Views/UserControls/Admin/ShiftListUC.xaml
+++ b/WeddingApp/WeddingApp/Views/UserControls/Admin/ShiftListUC.xaml
@@ -74,7 +74,7 @@
                     HorizontalAlignment="Right"
                     Grid.Column="4"
                     Margin="0 10 40 0"
-                    Command="{Binding AddShiftCommand}"
+                    Command="{Binding AddSelectedShiftCommand}"
                     CommandParameter="{Binding ElementName=shiftListUC}" />
             </Grid>
 
@@ -142,7 +142,7 @@
                                     HorizontalAlignment="Center"
                                     Style="{StaticResource editBtn}"
                                     ToolTip="Chỉnh sửa chức vụ"
-                                    Command="{Binding Source={StaticResource shiftListVM}, Path=EditShiftCommand}"
+                                    Command="{Binding Source={StaticResource shiftListVM}, Path=EditSelectedShiftCommand}"
                                     CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type ListViewItem}}}"/>
 
                             </Grid>
